--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,9 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: 'actions/checkout@v2'
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v2
+        uses: 'actions/setup-node@v2'
         with:
           node-version: '16'
           cache: 'npm'
@@ -21,7 +21,7 @@ jobs:
       - run: npm run lint
       - run: npm test
       - name: Run codacy-coverage-reporter
-        uses: codacy-coverage-reporter-action@v1
+        uses: 'codacy-coverage-reporter-action@v1'
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage/lcov.info
