--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,28 +1,56 @@
+# name: Node.js CI
+
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: 'actions/checkout@v2'
+#       - name: Use Node.js 16.x
+#         # uses: 'actions/setup-node@v2'
+#         with:
+#           node-version: '16'
+#           cache: 'npm'
+#       - name: Install dependencies
+#         run: npm ci
+#       - run: npm run lint
+#       - run: npm test
+#       - run: npm run build
+#       - name: Run codacy-coverage-reporter
+#         # uses: 'codacy-coverage-reporter-action@v1'
+#         with:
+#           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+#           coverage-reports: coverage/lcov.info
+
 name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, '**' ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+
     steps:
-      - uses: 'actions/checkout@v2'
-      - name: Use Node.js 16.x
-        # uses: 'actions/setup-node@v2'
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'npm'
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm ci
       - run: npm run lint
       - run: npm test
       - run: npm run build
-      - name: Run codacy-coverage-reporter
-        # uses: 'codacy-coverage-reporter-action@v1'
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: coverage/lcov.info
