--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -21,11 +21,11 @@
 #       - run: npm run lint
 #       - run: npm test
 #       - run: npm run build
-#       - name: Run codacy-coverage-reporter
-#         # uses: 'codacy-coverage-reporter-action@v1'
-#         with:
-#           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-#           coverage-reports: coverage/lcov.info
+      # - name: Run codacy-coverage-reporter
+      #   # uses: 'codacy-coverage-reporter-action@v1'
+      #   with:
+      #     project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+      #     coverage-reports: coverage/lcov.info
 
 name: Node.js CI
 
@@ -54,3 +54,8 @@ jobs:
       - run: npm run lint
       - run: npm test
       - run: npm run build
+      - name: Run codacy-coverage-reporter
+        uses: codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage/lcov.info
