--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,32 +1,3 @@
-# name: Node.js CI
-
-# on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
-
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: 'actions/checkout@v2'
-#       - name: Use Node.js 16.x
-#         # uses: 'actions/setup-node@v2'
-#         with:
-#           node-version: '16'
-#           cache: 'npm'
-#       - name: Install dependencies
-#         run: npm ci
-#       - run: npm run lint
-#       - run: npm test
-#       - run: npm run build
-      # - name: Run codacy-coverage-reporter
-      #   # uses: 'codacy-coverage-reporter-action@v1'
-      #   with:
-      #     project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-      #     coverage-reports: coverage/lcov.info
-
 name: Node.js CI
 
 on:
@@ -54,8 +25,8 @@ jobs:
       - run: npm run lint
       - run: npm test
       - run: npm run build
-      - name: Run codacy-coverage-reporter
-        uses: codacy-coverage-reporter-action@v1
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: coverage/lcov.info
+      # - name: Run codacy-coverage-reporter
+      #   uses: codacy-coverage-reporter-action@v1
+      #   with:
+      #     project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+      #     coverage-reports: coverage/lcov.info
