--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,6 +22,11 @@ jobs:
       - run: npm run lint
       - run: npm test
       - run: npm run build
+      - name: Publish code coverage-reports
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage/lcov.info
       # - name: Run codacy-coverage-reporter
       #   uses: codacy-coverage-reporter-action@v1
       #   with:
